# Pizza

./: Cargo.toml  README.md  plan.md  structure.md
config/: config.json  domains.json  frontend.json
proto/: service.proto
src/: constants.rs  error.rs  lib.rs  main.rs
src/app/: application.rs  lifecycle.rs  mod.rs
src/backend/: http_svr.rs  proxy.rs
src/breaker/: mod.rs
src/config/: app_config.rs  backend_config.rs  frontend_config.rs  loader.rs  merge.rs  mod.rs  server_config.rs
src/error_page/: mod.rs
src/flow_control/: mod.rs
src/frontend/: file_cache.rs  mod.rs  server.rs
src/gateway/: balancer.rs  manager.rs  mod.rs  proxy.rs  proxy_cache.rs  resolver.rs
src/gateway/server/: http_server.rs
src/grpc/: mod.rs  proxy.rs  server.rs  service.rs  web_proxy.rs
src/health_probe/: mod.rs
src/initialize/: registry.rs
src/latency/: mod.rs
src/middleware/: mod.rs
src/middleware/modifier/: cors.rs  custom_header.rs  fail_response.rs  gzip.rs  mod.rs  secure_header.rs  trace_id.rs
src/middleware/pre_handler/: auth.rs  domain_ctrl.rs  image_protect.rs  mod.rs  rate_limiter.rs  sanitizer.rs
src/notifier/: mod.rs
src/stat/: collector.rs  geo.rs  mod.rs
src/static_direct/: mod.rs
src/utils/: defaults.rs  header.rs  id.rs  mod.rs  time.rs  trace_id.rs
src/wasm_plugin/: mod.rs
