[package]
name = "pizza"
version = "0.1.0"
edition = "2024"
description = "A next-generation API gateway and static proxy server"
license = "MIT"

[[bin]]
name = "pizza"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http1", "http2", "json", "query"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
mongodb = "3"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
wasmtime = "28"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
mime_guess = "2"
maxminddb = "0.24"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
notify = "7"
url = "2"
bytes = "1"
pin-project = "1"
rand = "0.8"
once_cell = "1"
http = "1"
num_cpus = "1"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
